Section 1 fixed menu and content layout issues

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -11,25 +11,26 @@
 </head>
 <body>
 
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <div class="menu_items">
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
-    </div>
-<div class="content">
     <div class="container1">
+        <div class="head">
+            <div class="logo">Header Logo</div>
+            <div class="menu_items">
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+        </div>
 
+    <div class="cat-1">
         <div class="text1"><span class="hero">This website is awesome!</span><br>
             <span class="secondary">This website has some subtext that goes here under the main title. It's a smaller font, and the color is lower contrast.</span><br>
         <button class="sign_up">Sign Up</button></div>
 
         <div class="image"></div>
 
+    </div>
     </div>
 
     <div class="container2">
@@ -60,7 +61,6 @@
         </div>
 
     </div>
-</div>
     <div class="footer">Copyright © The Odin Project 2021</div>
     
 </body>
