RPS buttons complete. Game works without console or prompted input from user.

--- a/rps/index.html
+++ b/rps/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <button class="game" id="1">Rock</button>
+    <button class="game" id="2">Paper</button>
+    <button class="game" id="3">Scissors</button>
+
+    <div id="score"></div>
+
     <script src="javascript.js"></script>
 </body>
 </html>
