--- a/etch-sketch/index.html
+++ b/etch-sketch/index.html
@@ -8,6 +8,7 @@
     <title>Etch-A-Sketch</title>
 </head>
 <body>
+    <button id="size">Change Size</button>
     <div class="main_container"></div>
 </body>
 </html>
