--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./scripts.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
     <div id="mainContainer">
         <div id="outputContainer">
-            <h3 id="output">12345</h3>
+            <h3 id="output"></h3>
         </div>
         <div id="inputContainer">
             <div id="keypad">
@@ -29,7 +30,6 @@
                     <button id="9" class="number">9</button>
                 </div>
                 <div id="numRow4" class="numRow">
-                    <!-- <button id="negative" class="number">+/-</button> -->
                     <button id="decimal" class="number">.</button>
                     <button id="zero" class="number">0</button>
                 </div>
