Most functions working. Need to limit decimal to a single instance.

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="mainContainer">
         <div id="outputContainer">
-            <h3 id="output"></h3>
+            <h3 id="output">0</h3>
         </div>
         <div id="inputContainer">
             <div id="keypad">
