--- a/css/admin_dashboard/index.html
+++ b/css/admin_dashboard/index.html
@@ -20,9 +20,9 @@
                 <img class="profile-icon row2" src="./anime style cartoon cat on a swing.png">
                 <p class="row2 greeting">Hi there,<br><span id="name">Larkin South (@larkin)</span></p>
                 <p id="gap3"></p>
-                <button type="button" class="row2">New</button>
-                <button type="button" class="row2">Upload</button>
-                <button type="button" class="row2">Share</button>
+                <button type="button" id="new" class="row2">New</button>
+                <button type="button" id="upload" class="row2">Upload</button>
+                <button type="button" id="share" class="row2">Share</button>
             </div>
         </div>
         <div class="sidebar">
