Troubleshooting card layouts. Cannot get rid of excess space at bottom of content.

--- a/css/admin_dashboard/index.html
+++ b/css/admin_dashboard/index.html
@@ -19,7 +19,6 @@
             <div class="head-div">
                 <img class="profile-icon row2" src="./anime style cartoon cat on a swing.png">
                 <p class="row2 greeting">Hi there,<br><span id="name">Larkin South (@larkin)</span></p>
-                <p id="gap3"></p>
                 <button type="button" id="new" class="row2">New</button>
                 <button type="button" id="upload" class="row2">Upload</button>
                 <button type="button" id="share" class="row2">Share</button>
@@ -50,9 +49,11 @@
             <p>Privacy</p>
         </div>
         <div class="content">
-            <div class="projects"></div>
-            <div class="announcements"></div>
-            <div class="trending"></div>
+            <div class="projects">
+                <p>Your Projects</p>
+                <div class="card"><h3>Project 1</h3></div>
+            </div>
+            <div class="side-content">side 2</div>
         </div>
     </div>
 </body>
