Structure of side-content complete. Finalizing layout and adding design.

--- a/css/admin_dashboard/index.html
+++ b/css/admin_dashboard/index.html
@@ -106,7 +106,12 @@
                     </p>
                 </div>            
             </div>
-            <div class="side-content">side 2</div>
+            <div class="side-content">
+                <h3>Announcements</h3>
+                <div class="announcements">stuff</div>
+                <h3>Trending</h3>
+                <div class="trending">stuff</div>
+            </div>
         </div>
     </div>
 </body>
