--- a/css/admin_dashboard/index.html
+++ b/css/admin_dashboard/index.html
@@ -108,9 +108,43 @@
             </div>
             <div class="side-content">
                 <h3>Announcements</h3>
-                <div class="announcements">stuff</div>
+                <div class="announcements">
+                    <div>
+                        <h4>Site Maintenance</h4>
+                        <p>this site is a little broken still</p>
+                    </div>
+                    <div class="middle">
+                        <h4>Community Share Day</h4>
+                        <p>whatever that means</p>
+                    </div>
+                    <div>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Yeah, still getting your data :P</p>
+                    </div>
+                </div>
                 <h3>Trending</h3>
-                <div class="trending">stuff</div>
+                <div class="trending">
+                    <img class="profile-icon row2" src="./anime style cartoon cat on a swing.png">
+                    <div>
+                        <h4>@larkin1</h4>
+                        <p>it's a meeee</p>
+                    </div>
+                    <img class="profile-icon row2" src="./anime style cartoon cat on a swing.png">
+                    <div>
+                        <h4>@larkin2</h4>
+                        <p>another</p>
+                    </div>
+                    <img class="profile-icon row2" src="./anime style cartoon cat on a swing.png">
+                    <div>
+                        <h4>@larkin3</h4>
+                        <p>duplicate</p>
+                    </div>
+                    <img class="profile-icon row2" src="./anime style cartoon cat on a swing.png">
+                    <div>
+                        <h4>@larkin4</h4>
+                        <p>last one</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
